Fixed post spacing issues.

--- a/app/less/sections/posts.less
+++ b/app/less/sections/posts.less
@@ -11,7 +11,7 @@ section.post {
     background-color: #fff;
     padding: 5px;
 
-    a {
+    .a {
       // margin-bottom: @post-space;
       display: inherit;
       padding: @post-space;
